styles/main.css
:root {
  --bulma-primary-h: 2deg;
  --bulma-primary-s: 77%;
  --bulma-primary-l: 70%;
  --bulma-link-h: 175deg;
  --bulma-link-s: 54%;
  --bulma-link-l: 75%;
  --bulma-info-h: 0deg;
  --bulma-info-s: 0%;
  --bulma-info-l: 0%;
  --bulma-success-h: 240deg;
  --bulma-success-s: 0%;
  --bulma-success-l: 52%;
  --bulma-warning-h: 0deg;
  --bulma-warning-s: 62%;
  --bulma-warning-l: 57%;
  --bulma-danger-h: 0deg;
  --bulma-danger-s: 0%;
  --bulma-danger-l: 98%;
}

html {
  background: url(images/Background.JPG) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

